<resources>
    <string name="app_name">TheMovieApp</string>
    <string name="detail_from_movie">Detail From Movie</string>

    <string name="base_url_images">https://image.tmdb.org/t/p/w200/</string>
    <string name="base_url_images_large">https://image.tmdb.org/t/p/original/</string>

    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>

    <string name="top_rated_tv_shows">Top Rated Tv Shows</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="airing_today_tv_shows">Airing Today Tv Shows</string>

    <string name="original_title">Original Title:</string>
    <string name="original_language">Original Language:</string>
    <string name="release_date">Release Date:</string>
    <string name="popularity">Popularity:</string>
    <string name="vote">Vote Count/Average:</string>
    <string name="overview">Overview:</string>

    <string name="original_name">Original Name:</string>
    <string name="first_air_date">First Air Date:</string>
</resources>