<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.dflorencia.themovieapp.movie.MovieViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/ivPoster"
            android:layout_width="@dimen/item_width"
            android:layout_height="@dimen/item_height"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:imageUrl="@{viewModel.movie.posterPath}"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:layout_marginVertical="@dimen/margin_summary_vertical"
            android:layout_marginHorizontal="@dimen/margin_summary_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblOriginalTitle"
                    android:text="@string/original_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/txtOriginalTitle"
                    android:text="@{viewModel.movie.originalTitle}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblOriginalLanguage"
                    android:text="@string/original_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/txtOriginalLanguage"
                    android:text="@{viewModel.movie.originalLanguage}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblReleaseDate"
                    android:text="@string/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/txtReleaseDate"
                    android:text="@{viewModel.movie.releaseDate}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPopularity"
                    android:text="@string/popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/txtPopularity"
                    android:text="@{viewModel.movie.popularity.toString()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblVote"
                    android:text="@string/vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/txtVote"
                    android:text="@{viewModel.movie.voteCount.toString() + '/' + viewModel.movie.voteAverage.toString()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblOverview"
                    android:text="@string/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/txtOverview"
                    android:text="@{viewModel.movie.overview}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_body"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>