<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.dflorencia.themovieapp.overview.OverviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblMoviesTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/top_rated_movies"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:visible="@{!viewModel.moviesTopRated.empty}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMoviesTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/recycler_view_padding"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"
                    app:dataMovie="@{viewModel.moviesTopRated}"/>

                <TextView
                    android:id="@+id/lblMoviesPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/popular_movies"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:visible="@{!viewModel.moviesPopular.empty}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMoviesPopular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/recycler_view_padding"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"
                    app:dataMovie="@{viewModel.moviesPopular}"/>

                <TextView
                    android:id="@+id/lblMoviesUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/upcoming_movies"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:visible="@{!viewModel.moviesUpcoming.empty}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMoviesUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/recycler_view_padding"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"
                    app:dataMovie="@{viewModel.moviesUpcoming}"/>

                <TextView
                    android:id="@+id/lblTvShowsTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/top_rated_tv_shows"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:visible="@{!viewModel.tvShowsTopRated.empty}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTvShowsTopRated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/recycler_view_padding"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"
                    app:dataTvShow="@{viewModel.tvShowsTopRated}"/>

                <TextView
                    android:id="@+id/lblTvShowsPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/popular_tv_shows"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:visible="@{!viewModel.tvShowsPopular.empty}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTvShowsPopular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/recycler_view_padding"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"
                    app:dataTvShow="@{viewModel.tvShowsPopular}"/>

                <TextView
                    android:id="@+id/lblTvShowsAiringToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginHorizontal="@dimen/margin_small"
                    android:text="@string/airing_today_tv_shows"
                    android:textSize="@dimen/text_size_title"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:visible="@{!viewModel.tvShowsAiringToday.empty}"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTvShowsAiringToday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/recycler_view_padding"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"
                    app:dataTvShow="@{viewModel.tvShowsAiringToday}"/>

            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/imgStatusMovieTopRated"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:apiStatus="@{viewModel.status}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>